<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.denoptim</groupId>
  <artifactId>denoptim</artifactId>
  <version>3.0.0</version>
  <name>denoptim</name>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
	<dependency>
	    <groupId>commons-cli</groupId>
	    <artifactId>commons-cli</artifactId>
	    <version>1.5.0</version>
	</dependency>
    <!-- https://mvnrepository.com/artifact/net.sourceforge.jmol/jmol -->
	<dependency>
	    <groupId>net.sourceforge.jmol</groupId>
	    <artifactId>jmol</artifactId>
	    <version>14.31.10</version>
	</dependency>
	<dependency>
	    <artifactId>cdk-bundle</artifactId>
	    <groupId>org.openscience.cdk</groupId>
	    <version>2.7.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
	<dependency>
	    <groupId>commons-io</groupId>
	    <artifactId>commons-io</artifactId>
	    <version>2.11.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>3.12.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-math3</artifactId>
	    <version>3.6.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.9.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
	<dependency>
	    <groupId>com.google.guava</groupId>
	    <artifactId>guava</artifactId>
	    <version>31.0.1-jre</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
	<dependency>
	    <groupId>org.jfree</groupId>
	    <artifactId>jfreechart</artifactId>
	    <version>1.5.3</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
	<dependency>
	    <groupId>org.jgrapht</groupId>
	    <artifactId>jgrapht-core</artifactId>
	    <version>1.5.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-algorithms -->
	<dependency>
	    <groupId>net.sf.jung</groupId>
	    <artifactId>jung-algorithms</artifactId>
	    <version>2.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-api -->
	<dependency>
	    <groupId>net.sf.jung</groupId>
	    <artifactId>jung-api</artifactId>
	    <version>2.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-graph-impl -->
	<dependency>
	    <groupId>net.sf.jung</groupId>
	    <artifactId>jung-graph-impl</artifactId>
	    <version>2.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.jung/jung-visualization -->
	<dependency>
	    <groupId>net.sf.jung</groupId>
	    <artifactId>jung-visualization</artifactId>
	    <version>2.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter</artifactId>
	    <version>5.8.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.8.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>5.8.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-migrationsupport -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-migrationsupport</artifactId>
	    <version>5.8.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>5.8.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
	<dependency>
	    <groupId>javax.vecmath</groupId>
	    <artifactId>vecmath</artifactId>
	    <version>1.5.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
	<dependency>
	    <groupId>jakarta.el</groupId>
	    <artifactId>jakarta.el-api</artifactId>
	    <version>4.0.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
	<dependency>
	    <groupId>org.glassfish</groupId>
	    <artifactId>jakarta.el</artifactId>
	    <version>4.0.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-core</artifactId>
	    <version>5.3.16</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.github.dpaukov/combinatoricslib3 -->
	<dependency>
	    <groupId>com.github.dpaukov</groupId>
	    <artifactId>combinatoricslib3</artifactId>
	    <version>3.3.3</version>
	</dependency>
</dependencies>
  
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
	  </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
      </plugin>
        <!-- Maven Assembly Plugin -->
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-assembly-plugin</artifactId>
          <configuration>
		    <!-- get all project dependencies -->
		    <descriptorRefs>
		        <descriptorRef>jar-with-dependencies</descriptorRef>
		    </descriptorRefs>
		    <!-- MainClass in mainfest make a executable jar -->
		    <archive>
		      <manifest>
	            <mainClass>denoptim.main.Main</mainClass>
		      </manifest>
		    </archive>
	      </configuration>
	      <executions>
		    <execution>
		      <id>make-assembly</id>
                <!-- bind to the packaging phase -->
		        <phase>package</phase>
		        <goals>
		            <goal>single</goal>
		        </goals>
	          </execution>
	        </executions>
        </plugin>
    </plugins>
  </build>
</project>
